Add library requirement

--- a/inst/templates/dashboard_groups/dashboard.qmd
+++ b/inst/templates/dashboard_groups/dashboard.qmd
@@ -23,8 +23,8 @@ library(knitr)
 library(leaflet)
 library(leaflet.extras)
 library(lubridate)
+library(OSMdashboard)
 library(plotly)
-library(reactable)
 library(readr)
 library(sf)
 library(stringr)
